--- a/LostyApi/LostyApi.csproj
+++ b/LostyApi/LostyApi.csproj
@@ -98,6 +98,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Archive.cs" />
+    <Compile Include="Models\Items.cs" />
+    <Compile Include="Models\Questions.cs" />
+    <Compile Include="Models\Question_findings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -111,7 +115,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
