--- a/LostyApi/Web.config
+++ b/LostyApi/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301879
@@ -6,7 +6,7 @@
 <configuration>
 
   <connectionStrings>
-    <add name="losty" connectionString="Data Source = den1.mssql7.gear.host; Persist Security Info=True;User ID = losty;password=	Gy4w4P3Z~-S3"/>
+    <add name="losty2022" connectionString="Data Source=den1.mssql7.gear.host;Persist Security Info=True;User ID=losty2022;password=Rm422FmrNj~_"/>
   </connectionStrings>
 
 
